# notepad

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  configure
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.travis/: macos-script.sh  script.sh
CMake/Modules/: FindQScintilla.cmake
debian/: changelog  control  copyright
doc/api/: mkdocs.yml
doc/api/docs/: index.md
doc/api/docs/Objects/: Editor.md  Notepad.md  NotepadApi.md  Window.md
images/: notepadng.icns
snap/: snapcraft.yaml
src/: CMakeLists.txt  LICENSE-3RD-PARTY.txt  editortabwidget.cpp  frmencodingchooser.cpp  frmindentationmode.ui  frmpreferences.cpp  frmpreferences.ui  iconprovider.cpp  keygrabber.cpp  localcommunication.cpp  mainwindow.cpp  nngrun.cpp  nngsettings.cpp  notepadng.cpp  resources.qrc  singleapplication.cpp  stats.cpp
src/EditorNS/: bannerbasicmessage.cpp  bannerfilechanged.cpp  bannerfileremoved.cpp  customscintilla.cpp  editor.cpp  languageservice.cpp  lexerfactory.cpp  nulllexer.cpp  scintillatheme.cpp
src/Search/: advancedsearchdock.cpp  filereplacer.cpp  filesearcher.cpp  frmsearchreplace.cpp  frmsearchreplace.ui  searchinstance.cpp  searchobjects.cpp  searchstring.cpp
src/Sessions/: backupservice.cpp  persistentcache.cpp  sessions.cpp
src/editor/: index.html
src/extension_tools/: install.js  pack.js  readmanifest.js
src/include/: docengine.h  editortabwidget.h  frmencodingchooser.h  frmindentationmode.h  frmpreferences.h  keygrabber.h  mainwindow.h  nngrun.h  nngsettings.h  notepadng.h  topeditorcontainer.h
src/include/EditorNS/: bannerbasicmessage.h  bannerfilechanged.h  bannerfileremoved.h  editor.h  lexerfactory.h
src/include/Search/: frmsearchreplace.h  searchinstance.h  searchobjects.h  searchstring.h
src/include/Sessions/: persistentcache.h  sessions.h
src/translations/: notepad_de.qm  notepad_de.ts  notepad_es.qm  notepad_es.ts  notepad_fr.qm  notepad_fr.ts  notepad_hu.qm  notepad_hu.ts  notepad_it.qm  notepad_it.ts  notepad_ja.qm  notepad_ja.ts  notepad_pl.qm  notepad_pl.ts  notepad_pt.qm  notepad_pt.ts  notepad_ru.qm  notepad_ru.ts  notepad_sl.qm  notepad_sl.ts  notepad_sv.qm  notepad_sv.ts  notepad_uk.qm  notepad_uk.ts  notepad_zh.qm  notepad_zh.ts  notepadng_de.qm  notepadng_de.ts  notepadng_es.qm  notepadng_es.ts  notepadng_fr.qm  notepadng_fr.ts  notepadng_hu.qm  notepadng_hu.ts  notepadng_it.qm  notepadng_it.ts  notepadng_ja.qm  notepadng_ja.ts  notepadng_pl.qm  notepadng_pl.ts  (+12 more)
src/ui/: CMakeLists.txt  clickablelabel.cpp  docengine.cpp  editortabwidget.cpp  frmabout.cpp  frmabout.ui  frmencodingchooser.cpp  frmencodingchooser.ui  frmindentationmode.ui  frmlinenumberchooser.ui  frmpreferences.cpp  frmpreferences.ui  globals.cpp  iconprovider.cpp  keygrabber.cpp  localcommunication.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  nngrun.cpp  nngsettings.cpp  notepad.cpp  notepadng.cpp  nprun.cpp  npsettings.cpp  nqqrun.cpp  nqqsettings.cpp  resources.qrc  singleapplication.cpp  stats.cpp  svgiconengine.cpp  topeditorcontainer.cpp  ui.pro
src/ui-tests/: CMakeLists.txt  tst_notepadngtest.cpp  tst_notepadtest.cpp  ui-tests.pro
src/ui/EditorNS/: bannerbasicmessage.cpp  bannerfilechanged.cpp  bannerfileremoved.cpp  bannerindentationdetected.cpp  customqwebview.cpp  customscintilla.cpp  editor.cpp  languageservice.cpp  lexerfactory.cpp
src/ui/Extensions/: extension.cpp  extensionsloader.cpp  extensionsserver.cpp  installextension.cpp  installextension.ui  runtimesupport.cpp
src/ui/Extensions/Stubs/: editorstub.cpp  menuitemstub.cpp  notepadstub.cpp  stub.cpp  windowstub.cpp
src/ui/Search/: advancedsearchdock.cpp  filereplacer.cpp  filesearcher.cpp  frmsearchreplace.cpp  frmsearchreplace.ui  searchinstance.cpp  searchobjects.cpp  searchstring.cpp
src/ui/Sessions/: backupservice.cpp  persistentcache.cpp  sessions.cpp
src/ui/icons/notepad/: index.theme
src/ui/icons/notepadng/: index.theme
src/ui/include/: clickablelabel.h  docengine.h  editortabwidget.h  frmabout.h  frmencodingchooser.h  frmindentationmode.h  frmlinenumberchooser.h  frmpreferences.h  globals.h  keygrabber.h  mainwindow.h  nngrun.h  nngsettings.h  notepad.h  notepadng.h  nprun.h  npsettings.h  nqqrun.h  nqqsettings.h  singleapplication.h  stats.h  svgiconengine.h  topeditorcontainer.h
src/ui/include/EditorNS/: bannerbasicmessage.h  bannerfilechanged.h  bannerfileremoved.h  bannerindentationdetected.h  customqwebview.h  customscintilla.h  editor.h  languageservice.h  lexerfactory.h  nulllexer.h  scintillatheme.h
src/ui/include/Extensions/: extension.h  extensionsloader.h  extensionsserver.h  installextension.h  runtimesupport.h
src/ui/include/Extensions/Stubs/: editorstub.h  menuitemstub.h  notepadstub.h  stub.h  windowstub.h
src/ui/include/Search/: advancedsearchdock.h  filereplacer.h  filesearcher.h  frmsearchreplace.h  searchhelpers.h  searchobjects.h  searchstring.h
src/ui/include/Sessions/: backupservice.h  persistentcache.h  sessions.h
support_files/: notepad.appdata.xml  notepadng.appdata.xml
support_files/launch/: notepad
support_files/manpage/: notepad.1  notepadng.1
support_files/shortcuts/: notepad.desktop  notepadng.desktop
tools/: format.sh
translations/: notepadng_de.ts  notepadng_es.ts  notepadng_fr.ts  notepadng_hu.ts  notepadng_it.ts  notepadng_ja.ts  notepadng_pl.ts  notepadng_pt.qm  notepadng_pt.ts  notepadng_ru.ts  notepadng_sl.ts  notepadng_sv.ts  notepadng_uk.ts  notepadng_zh.ts
